hide large image when in portrait image is showing - fix bug where both show on narrow desktop

--- a/less/splash.less
+++ b/less/splash.less
@@ -31,6 +31,10 @@
             @media (max-width: 823px) {
                 display: none;
             }
+
+            @media (orientation: portrait) {
+                display: none;
+            }
         }
 
         .splash__image_small {
